...
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_login_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/setting_login"
                            android:textColor="#a3111111"
                            android:textSize="16dp" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
...
                                android:gravity="center_vertical"
                                android:text="네이버 로그인"
                                android:textColor="#111111"
                                android:textSize="16dp" />

                            <CheckBox
                                android:id="@+id/check_sns_naver"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="2dp"
                                android:background="@drawable/bg_setting_checkbox"
                                android:button="@null" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/button_sns_naver"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:contentDescription="네이버 로그인" />

                        <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
...
                                android:gravity="center_vertical"
                                android:text="카카오 로그인"
                                android:textColor="#111111"
                                android:textSize="16dp" />

                            <CheckBox
                                android:id="@+id/check_sns_kakao"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="2dp"
                                android:background="@drawable/bg_setting_checkbox"
                                android:button="@null" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/button_sns_kakao"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:contentDescription="카카오 로그인" />
                    </FrameLayout>

...
