...
                    <!-- 아이디 입력 영역 -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="51dp">

                        <AutoCompleteTextView
                            android:id="@+id/edit_login_id"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_login_edit_text"
                            android:completionThreshold="2"
                            android:dropDownHeight="180dp"
...
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="51dip"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/edit_password"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="51dp"
                            android:background="@drawable/bg_login_edit_text"
                            android:hint="@string/login_hint_password"
                            android:inputType="textPassword"
...
                </RelativeLayout>

            </LinearLayout>

            <!--login button-->
            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dip"
                android:layout_marginRight="16dp"
                android:background="@drawable/btn_login_button_selector"
...
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/btn_naver_login"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/naver_login_icon" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_kakao_login"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
...
