...
    <string name="login_error_msg">서버와의 연결이 원활하지 않습니다.\n잠시 후 다시 시도해주시기 바랍니다.</string>

    <!-- 간편로그인 -->
    <string name="login_easy">간편 로그인 설정</string>

    <!-- SNS 로그인 -->
    <string name="sns_login_btn_login">로그인</string>
    <string name="sns_login_btn_password_find">비밀번호 찾기</string>
    <string name="sns_login_error">로그인 수행 중 오류가 발생했습니다.</string>
    <string name="sns_login_version_old">네이버/카카오 로그인 연동은 안드로이드 OS 5.0 버전 이상에서만 사용 가능합니다.</string>

    <string name="sns_kakaotalk_not_installed">카카오톡 앱을 설치한 후에 사용할 수 있습니다.</string>
    <string name="sns_kakaostory_not_installed">카카오스토리 앱을 설치한 후에 사용할 수 있습니다.</string>
...
    <!-- 환경설정 -->
    <!-- 이력 : 취급 -> 처리, 관리 -> 보호 20160802 보안관련 요청  -->
    <string name="setting_title">설정</string>
    <string name="setting_login_status">아이디</string>
    <string name="setting_login_off">로그인 해주세요</string>
    <string name="setting_login">로그인</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_push">알림(PUSH) 받기</string>
    <string name="setting_push_ad">광고성 알림(PUSH) 받기</string>
    <string name="setting_push_sound">무음으로 알림</string>
    <string name="setting_video">동영상배너 자동플레이</string>
    <string name="setting_push_description">본 설정은 해당 기기에서만 유효하며, 수신 거절 시 모바일 상담 답변 등의 정보성 알림도 발송되지 않습니다.</string>
    <string name="setting_push_benefit_description">광고성 (PUSH) 메시지에 동의하시면, GS SHOP 할인권, 쿠폰, 상품권 등 푸짐한 혜택을 받으실 수 있습니다.</string>
...
    <string name="kakao_link_message">GS SHOP이 카카오를 사용하여 로그인합니다.</string>
    <string name="fp_unlink_message">지문 로그인을 해제하시겠어요?</string>
    <string name="fp_link_message">휴대폰에 등록된 지문정보로 로그인이 됩니다.</string>
    <!-- <string name="fp_unregistered">지문로그인 서비스는\n지문 등록 가능 휴대폰에서만\n이용하실 수 있습니다.</string> -->
    <string name="fp_unregistered">바이오정보(지문) 등록이 가능한 휴대폰에서만 사용할 수 있습니다.</string>
    <string name="fp_unsetting">휴대폰 \'설정\' 메뉴에서 지문등록 및 기능활성화 후 사용할 수 있습니다</string>
    <string name="sns_login_link">로그인 연동 관리</string>

    <!-- 버전정보 -->
    <string name="version_setting_title">버전관리</string>
    <string name="version_current">현재버전</string>
    <string name="version_last">최신버전</string>
    <string name="version_update">최신버전 업데이트 v%1$s</string>
...
