...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_btn"
            android:focusable="true"
            android:nextFocusUp="@id/txt_message"
            android:text="@string/mc_ok"
            android:textColor="#444444"
            android:textSize="16sp"
            android:typeface="sans" />

    </LinearLayout>

...
